<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EditProductActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_edit_product">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/tittle_edit_edit_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/tittle"
                android:inputType="text"
                android:minHeight="48dp"
                android:textSize="@dimen/edit_text_size_edit_activity"
                app:layout_constraintEnd_toStartOf="@+id/mic_button_edit_product"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/description_edit_edit_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="text"
                android:minHeight="48dp"
                android:textSize="@dimen/edit_text_size_edit_activity"
                app:layout_constraintEnd_toStartOf="@+id/mic_button_edit_product2"
                app:layout_constraintStart_toStartOf="@+id/tittle_edit_edit_product"
                app:layout_constraintTop_toBottomOf="@+id/tittle_edit_edit_product" />

            <EditText
                android:id="@+id/number_edit_edit_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="5"
                android:hint="@string/number"
                android:inputType="number"
                android:minHeight="48dp"
                android:textSize="@dimen/edit_text_size_edit_activity"
                app:layout_constraintEnd_toEndOf="@+id/tittle_edit_edit_product"
                app:layout_constraintStart_toStartOf="@+id/description_edit_edit_product"
                app:layout_constraintTop_toBottomOf="@+id/description_edit_edit_product" />

            <ImageButton
                android:id="@+id/mic_button_edit_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/tittle_edit_edit_product"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tittle_edit_edit_product"
                app:srcCompat="@drawable/microphone_image" />

            <ImageButton
                android:id="@+id/mic_button_edit_product2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/description_edit_edit_product"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/description_edit_edit_product"
                app:srcCompat="@drawable/microphone_image" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/general"
                android:textSize="@dimen/edit_text_size_edit_activity"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tittle_edit_edit_product"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/category"
                android:textSize="@dimen/edit_text_size_edit_activity"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/number_edit_edit_product"
                app:layout_constraintTop_toBottomOf="@+id/number_edit_edit_product" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/category_recycler_edit_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:listitem="@layout/category_card" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_edit_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/zielony"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/cancel_icon2"
        app:titleTextColor="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>